test/errors/nonIterable.compopts
--detailed-errors # nonIterable-detailed.good
--no-detailed-errors # nonIterable-brief.good
